--- a/nginx/sites/app.conf.example
+++ b/nginx/sites/app.conf.example
@@ -24,7 +24,7 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://node-upstream;
+        proxy_pass http://node-upstream:3000;
     }
 
     error_log /var/log/nginx/app_error.log;
